--- a/U6A4/css/fonts.css
+++ b/U6A4/css/fonts.css
@@ -22,6 +22,5 @@
 }
 @font-face {
 	font-family: 'Francois One', sans-serif;
-	font-style: normal;
-	src: url('../fonts/Francois_One_regular.ttf')
+	src: url('../fonts/Francois_One_regular.ttf');
 }
