--- a/U6A4/css/fonts.css
+++ b/U6A4/css/fonts.css
@@ -24,5 +24,5 @@
 	font-family: 'Francois One', sans-serif;
 	font-style: normal;
 	font-weight: bold;
-	src: url('../fonts/Francois_One_regular.ttf');
+	src: url('../fonts/Francois_One.ttf');
 }
