--- a/U6A4/css/fonts.css
+++ b/U6A4/css/fonts.css
@@ -21,7 +21,7 @@
 	src: url('../fonts/Roboto_500italic.ttf'),url('../fonts/roboto_500italic-webfont.woff')
 }
 @font-face {
-	font-family: 'Francois One', sans-serif;
+	font-family: 'Francois One';
 	font-style: normal;
 	src: url('../fonts/Francois_One_regular.ttf')
 }
